adds API call, form, and promise

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,14 +3,19 @@
         "ecmaVersion": 6,
         "sourceType": "module"
     },
-    "extends": "eslint:recommended",
+    # "extends": "eslint:recommended",
     "env": {
       "es6": true,
       "browser": true,
-      "jquery": true
+      "jquery": true,
+      "node": true,
+      "jasmine": true,
     },
     "rules": {
-        "semi": 1,
-        "indent": ["warn", 2]
-    }
+      "semi": 1,
+      "indent": ["warn", 2],
+      "no-console": "warn",
+      "no-debugger": "warn",
+      "no-unused-vars": "warn",
+  }
 }
